--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: 4fr 1fr 2fr 2fr 1fr 4fr;
+    grid-template-columns:  1fr 2fr;
     grid-template-areas:
     "titlepagename titlepagename"
     "navbar navbar"
