--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
     color: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .navbar {
@@ -66,7 +68,8 @@ body {
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 10px;
-    background-color: white;
+    background-color: #a09c9c;
+    
 }
 
 .footer {
@@ -76,6 +79,8 @@ body {
     padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 img {
