--- a/negatives.css
+++ b/negatives.css
@@ -20,6 +20,8 @@ body {
     color: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .navbar {
@@ -69,4 +71,6 @@ body {
     padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
