made some changes, currently just testing how to combine a feedback system into my code

--- a/contactpage.css
+++ b/contactpage.css
@@ -9,7 +9,7 @@ body {
     grid-template-areas:
     "titlepagename titlepagename titlepagename"
     "navbar navbar navbar"
-    "paragraph1 paragraph1 image1"
+    "contactform contactform contactform"
     "footer footer footer";
 }
 .titlepagename {
