--- a/contactpage.css
+++ b/contactpage.css
@@ -1,53 +1,24 @@
-body {
-    background-color: #99b3cc;
-    margin-top: 15px;
-}
-.container {
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns:  1fr 1fr 1fr;
-    grid-template-areas:
-    "titlepagename titlepagename titlepagename"
-    "navbar navbar navbar"
-    "contactform contactform contactform"
-    "footer footer footer";
-}
-.titlepagename {
-    grid-area: titlepagename;
-    background-color: #404040;
-    color: white;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-.navbar {
-    grid-area: navbar;
-    background-color: #404040;
-    text-align: center;
-    overflow: auto;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.navbar ul {
-    list-style-type: none;
-}
-.navbar li {
-    display: inline;
-    color: white;
-}
-.navbar a {
-    padding: 7px;
-    font-size: 15px;
-    width: 5%; /* Four links of equal widths */ 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.footer {
-    grid-area: footer;
-    background-color: #404040;
-    color: white;
-    padding: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+body {
+    font-family: 'Outfit';
+    background: linear-gradient(#ffdad5, #fff7f9);
+}
+
+.contact-container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.contact-left {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
 }
