--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #78beff;
+    background: linear-gradient(#2c3e50, #58b8c7);
     margin-top: 15px;
 }
 
@@ -49,7 +49,7 @@ body {
 
 .paragraph1{
     grid-area: paragraph1;
-    background-color: #78beff;
+    background-color: #658CBB;
     padding-top: 70px;
     padding-left: 20px;
     padding-right: 20px;
