--- a/contactpage.css
+++ b/contactpage.css
@@ -1,12 +1,33 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+
+.navbar {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns:  1fr 1fr 1fr;
+    grid-template-areas: 
+    "navbar navbar navbar";
 }
 
 body {
     font-family: 'Outfit';
     background: linear-gradient(#ffdad5, #fff7f9);
+}
+
+
+
+
+.navbar ul {
+    list-style-type: none;
+}
+
+.navbar li {
+    display: inline;
+    color: white;
+}
+
+.navbar a {
+    padding: 7px;
+    font-size: 15px;
+    width: 10%; /* Four links of equal widths */ 
 }
 
 .contact-container {
