--- a/contactpage.css
+++ b/contactpage.css
@@ -4,7 +4,8 @@
     grid-template-rows: auto;
     grid-template-columns:  1fr 1fr 1fr;
     grid-template-areas: 
-    "navbar navbar navbar";
+    "navbar navbar navbar"
+    "titlepagename titlepagename titlepagename";
 }
 
 body {
@@ -12,6 +13,16 @@ body {
     background: linear-gradient(#ffdad5, #fff7f9);
 }
 
+
+.titlepagename {
+    grid-area: titlepagename;
+    background-color: #404040;
+    color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
 
 
 
