--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     grid-template-areas:
     "titlepagename titlepagename titlepagename"
     "navbar navbar navbar"
-    "paragraph1 paragraph1 image1"
+    "paragraph1  image1 image1"
     "footer footer footer";
 }
 
@@ -50,10 +50,7 @@ body {
 .paragraph1{
     grid-area: paragraph1;
     background-color: #658CBB;
-    padding-top: 70px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 220px;
+    margin: 0;
     text-align: justify;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
@@ -64,17 +61,17 @@ body {
     grid-area: image1;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 100px;
+    padding-top: 10px;
     padding-left: 30px;
     padding-right: 30px;
-    padding-bottom: 10px;    
+    padding-bottom: 10px;
+    background-image: linear-gradient(to bottom, rgba (300, 246, 252, 0.52), rgba(248, 248, 248, 0.93)), url('images/computers.jpg');    
 }
 
 .footer {
     grid-area: footer;
     background-color: #404040;
     color: white;
-    padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     border-bottom-left-radius: 10px;
