--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
-    background: linear-gradient(#2c3e50, #297682);
+    background: linear-gradient(#2c3e50, #58b8c7);
     margin-top: 15px;
-    display: block;
 }
 
 .container {
@@ -11,7 +10,7 @@ body {
     grid-template-areas:
     "titlepagename titlepagename titlepagename"
     "navbar navbar navbar"
-    "image1 image1 image1"
+    "image1 image1 paragraph1"
     "footer footer footer";
 }
 
@@ -23,7 +22,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    opacity: 0.95;
 }
 
 .navbar {
@@ -32,7 +30,6 @@ body {
     text-align: center;
     overflow: auto;
     font-family: Arial, Helvetica, sans-serif;
-    opacity: 0.95;
 }
 
 .navbar ul {
@@ -50,27 +47,29 @@ body {
     width: 5%; /* Four links of equal widths */ 
 }
 
+.paragraph1{
+    grid-area: paragraph1;
+    background-color: #658CBB;
+    margin: 0;
+    text-align: justify;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(0, 0, 0);
+}
 
-.image1 {
+.image1{
     grid-area: image1;
-    height: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    background-image: linear-gradient(to bottom, rgba (300, 246, 252, 0.52), rgba(248, 248, 248, 0.93)), url('images/computers.jpg');    
 }
 
 img {
-    opacity: 0.4;
-}
-
-.text{
-    color: white;
-    font-size: 50px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-
-.websitesummary {
-    font-size: 40px;
+    width: 100%;
 }
 
 .footer {
@@ -81,8 +80,6 @@ img {
     text-align: center;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    font-size: 15px;
-    padding: 30px;
-    opacity: 0.95;
+    padding: 20px;
 }
 
