--- a/positives.css
+++ b/positives.css
@@ -1,8 +1,7 @@
 body {
-    background-color: #99b3cc;
+    background: linear-gradient(#2c3e50, #58b8c7);
     margin-top: 15px;
 }
-
 .container {
     display: grid;
     grid-template-rows: auto;
