--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    opacity: 0.9;
 }
 
 .navbar {
@@ -30,6 +31,7 @@ body {
     text-align: center;
     overflow: auto;
     font-family: Arial, Helvetica, sans-serif;
+    opacity: 0.9;
 }
 
 .navbar ul {
@@ -55,6 +57,7 @@ body {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(0, 0, 0);
+    opacity: 0.9;
 }
 
 .image1{
@@ -65,11 +68,15 @@ body {
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 10px;
-    background-image: linear-gradient(to bottom, rgba (300, 246, 252, 0.52), rgba(248, 248, 248, 0.93)), url('images/computers.jpg');    
+    background-image: linear-gradient(to bottom, rgba (300, 246, 252, 0.52), rgba(248, 248, 248, 0.93)), url('images/computers.jpg');
+    background-color: #658CBB;
+    opacity: 0.9;    
 }
 
 img {
-    width: 100%;
+    width: 90%;
+    opacity: 0.8;
+    align-items: center;
 }
 
 .footer {
@@ -81,5 +88,7 @@ img {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     padding: 20px;
+    opacity: 0.9;
 }
+
 
