--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
     "navbar navbar navbar"
     "image1 image1 paragraph1"
     "footer footer footer";
+    gap: 15px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .titlepagename {
@@ -19,10 +22,12 @@ body {
     background-color: #404040;
     color: white;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    font-size: 2em;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     opacity: 0.9;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar {
@@ -32,6 +37,7 @@ body {
     overflow: auto;
     font-family: Arial, Helvetica, sans-serif;
     opacity: 0.9;
+    padding: 1px 0;
 }
 
 .navbar ul {
@@ -44,39 +50,44 @@ body {
 }
 
 .navbar a {
-    padding: 7px;
-    font-size: 15px;
-    width: 5%; /* Four links of equal widths */ 
+    padding: 10px 20px;
+    font-size: 20px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.navbar a:hover {
+    background-color: #58b8c7;
+    border-radius: 5px;
 }
 
 .paragraph1{
     grid-area: paragraph1;
-    background-color: #658CBB;
-    margin: 0;
+    background-color: #a6caec;
+    border-radius: 10px;
+    padding: 80px 10px;
     text-align: justify;
-    font-size: 20px;
+    font-size: 23px;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(0, 0, 0);
+    color: black;
     opacity: 0.9;
+    line-height: 1;
 }
 
 .image1{
     grid-area: image1;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 10px;
-    background-image: linear-gradient(to bottom, rgba (300, 246, 252, 0.52), rgba(248, 248, 248, 0.93)), url('images/computers.jpg');
-    background-color: #658CBB;
-    opacity: 0.9;    
+    margin: auto;
+    padding: 10px;
+    background-color: #a6caec;
+    opacity: 0.9;
+    display: flex;
+    justify-content: center;   
 }
 
 img {
     width: 90%;
-    opacity: 0.8;
-    align-items: center;
+    opacity: 0.85;
+    border-radius: 10px;
 }
 
 .footer {
