--- a/mitigate.css
+++ b/mitigate.css
@@ -1,6 +1,7 @@
 body {
-    background: linear-gradient(#2c3e50, #58b8c7);
+    background: linear-gradient(#1e3c72, #3484d4);
     margin-top: 15px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -19,7 +20,7 @@ body {
 
 .titlepagename {
     grid-area: titlepagename;
-    background-color: #404040;
+    background-color: #2a5298;
     color: white;
     text-align: center;
     padding: 20px;
@@ -32,10 +33,9 @@ body {
 
 .navbar {
     grid-area: navbar;
-    background-color: #404040;
+    background-color: #243B55;
     text-align: center;
     overflow: auto;
-    font-family: Arial, Helvetica, sans-serif;
     opacity: 0.9;
     padding: 1px 0;
 }
@@ -63,19 +63,29 @@ body {
 
 .paragraph1{
     grid-area: paragraph1;
-    background-color: #a6caec;
+    background-color: #ffffff;
+    border-radius: 10px;
     padding: 20px;
-    text-align: justify;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    font-size: 1.2rem;
+    color: #333;
+    line-height: 1.3;
+    box-shadow: 0 4px 8px #0000001a;
+}
+
+.reference hr{
+    border: none;
+    width: 660px;
+    height: 2px;
+    background-color: grey;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .image1 {
     grid-area: media;
     margin: auto;
     padding: 10px;
-    background-color: #a6caec;
+    background-color: white;
     opacity: 0.9;
     border-radius: 10px;
     display: flex;
@@ -91,9 +101,9 @@ body {
 
 .footer {
     grid-area: footer;
-    background-color: #404040;
+    background-color: #2a5298;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Raleway', sans-serif;
     text-align: center;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
