--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
-    background: linear-gradient(#2c3e50, #58b8c7);
+    background: linear-gradient(#1e3c72, #3484d4);
     margin-top: 15px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -19,7 +20,7 @@ body {
 
 .titlepagename {
     grid-area: titlepagename;
-    background-color: #404040;
+    background-color: #2a5298;
     color: white;
     text-align: center;
     padding: 20px;
@@ -32,10 +33,10 @@ body {
 
 .navbar {
     grid-area: navbar;
-    background-color: #404040;
+    background-color: #243B55;
     text-align: center;
     overflow: auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     opacity: 0.9;
     padding: 1px 0;
 }
@@ -53,6 +54,7 @@ body {
     padding: 10px 20px;
     font-size: 20px;
     text-decoration: none;
+    color: #ffffff;
     transition: background-color 0.3s ease;
 }
 
@@ -63,38 +65,39 @@ body {
 
 .paragraph1{
     grid-area: paragraph1;
-    background-color: #a6caec;
+    background: #ffffff;
     border-radius: 10px;
-    padding: 80px 10px;
+    padding: 20px;
     text-align: justify;
-    font-size: 23px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    opacity: 0.9;
-    line-height: 1;
+    font-size: 1.2rem;
+    font-family: 'Roboto', sans-serif;
+    color: #333333;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    line-height: 1.6;
 }
 
 .image1{
     grid-area: image1;
     margin: auto;
     padding: 10px;
-    background-color: #a6caec;
-    opacity: 0.9;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px #0000001a;
     display: flex;
     justify-content: center;   
 }
 
-img {
-    width: 90%;
+.image1 img {
+    width: 100%;
     opacity: 0.85;
     border-radius: 10px;
 }
 
 .footer {
     grid-area: footer;
-    background-color: #404040;
+    background-color: #2a5298;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Raleway', sans-serif;
     text-align: center;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
