--- a/contactpage.css
+++ b/contactpage.css
@@ -66,6 +66,7 @@ body {
     padding: 10px 20px;
     font-size: 20px;
     text-decoration: none;
+    color: #ffffff;
     transition: background-color 0.3s ease;
 }
 
