--- a/positives.css
+++ b/positives.css
@@ -53,6 +53,7 @@ body {
     padding: 10px 20px;
     font-size: 20px;
     text-decoration: none;
+    color: #ffffff;
     transition: background-color 0.3s ease;
 }
 
@@ -97,6 +98,10 @@ body {
 .image1 video {
     max-width: 100%;
     border-radius: 10px;
+}
+
+iframe {
+    border: none;
 }
 
 .footer {
