made more cahnges using w3c validation for both html and css files

--- a/mitigate.css
+++ b/mitigate.css
@@ -100,6 +100,10 @@ body {
     border-radius: 10px;
 }
 
+iframe {
+    border: none;
+}
+
 .footer {
     grid-area: footer;
     background-color: #2a5298;
